// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GeoSearchControls Clear button expect to not render the button when the options is disabled 1`] = `
<div>
  <div />
</div>
`;

exports[`GeoSearchControls Clear button expect to not render the button when the refinement is not coming from the map 1`] = `
<div>
  <div />
</div>
`;

exports[`GeoSearchControls Clear button expect to render the button when the refinement come from the map 1`] = `
<div>
  <div>
    <button
      class="reset"
    >
      <span>
        reset
      </span>
    </button>
  </div>
</div>
`;

exports[`GeoSearchControls Control disabled expect to render nothing when refine on map move is enabled 1`] = `
<div>
  <div />
</div>
`;

exports[`GeoSearchControls Control disabled expect to render the button disabled when refine on map move is disabled and the map has not moved 1`] = `
<div>
  <div>
    <div
      class="control"
    >
      <button
        class="redo redo-disabled"
        disabled=""
      >
        <span>
          redo
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`GeoSearchControls Control disabled expect to render the button enabled when refine on map move is disabled and the map as moved 1`] = `
<div>
  <div>
    <div
      class="control"
    >
      <button
        class="redo"
      >
        <span>
          redo
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`GeoSearchControls Control enabled expect to render the button when refine on map move is disabled and the map has moved 1`] = `
<div>
  <div>
    <div
      class="control"
    >
      <button
        class="redo"
      >
        <span>
          redo
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`GeoSearchControls Control enabled expect to render the toggle checked when refine on map move is enabled 1`] = `
<div>
  <div>
    <div
      class="control"
    >
      <label
        class="label label-selected"
      >
        <input
          class="input"
          type="checkbox"
        />
        <span>
          toggle
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`GeoSearchControls Control enabled expect to render the toggle checked when refine on map move is enabled even when the map has moved 1`] = `
<div>
  <div>
    <div
      class="control"
    >
      <label
        class="label label-selected"
      >
        <input
          class="input"
          type="checkbox"
        />
        <span>
          toggle
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`GeoSearchControls Control enabled expect to render the toggle unchecked when refine on map move is disabled and the map has not moved 1`] = `
<div>
  <div>
    <div
      class="control"
    >
      <label
        class="label"
      >
        <input
          class="input"
          type="checkbox"
        />
        <span>
          toggle
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`GeoSearchControls expect to render nothing with refine disabled 1`] = `<div />`;
